[gd_scene load_steps=6 format=2]

[ext_resource path="res://Food/GlowingFood.gd" type="Script" id=1]
[ext_resource path="res://Food/GlowingFood.shader" type="Shader" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/brightness = 0.8
shader_param/seed = 73.5984
shader_param/speed = 2.0
shader_param/amplitude = Vector2( 3, 3 )
shader_param/flicker_strength = 0.15
shader_param/flicker_speed = 5.0
shader_param/color = Vector3( 0.621225, 0.962688, 0.978975 )

[sub_resource type="CircleShape2D" id=2]
radius = 12.6175

[node name="GlowingFood" type="Node2D"]
scale = Vector2( 1.1, 1.1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, 0.513351 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
